# OnlineLearningPlatform

./: .env.sample  Dockerfile  README.md  docker-compose.yml  payments.json  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginators.py  serializers.py  tasks.py  test_serializers.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_video.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_price_lesson_price.py
users/: filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: load_payments.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_phone_alter_user_city.py  0004_alter_user_avatar.py  0005_payment.py  0006_alter_user_managers.py  0007_alter_user_is_active.py  0008_payment_currency_payment_stripe_payment_status_and_more.py  0009_payment_link_alter_payment_amount.py
users/services/: stripe_service.py
